--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "test",
+    "test": "jest --verbose",
     "dev": "nodemon index.js"
   },
   "repository": {
@@ -22,5 +22,11 @@
     "express": "^4.17.1",
     "mongoose": "^5.10.11",
     "nodemon": "^2.0.6"
+  },
+  "devDependencies": {
+    "jest": "^26.6.1"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
