--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --verbose",
-    "dev": "nodemon index.js"
+    "test": "cross-env NODE_ENV=test jest --verbose",
+    "dev": "cross-env NODE_ENV=development nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -19,12 +19,15 @@
   "homepage": "https://github.com/15ambm/BlogList#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.11",
     "nodemon": "^2.0.6"
   },
   "devDependencies": {
-    "jest": "^26.6.1"
+    "cross-env": "^7.0.2",
+    "jest": "^26.6.1",
+    "supertest": "^6.0.1"
   },
   "jest": {
     "testEnvironment": "node"
